6.4.9
 - Regenerate build files.
 - Fix indentation warning in test16.cxx.
6.4.8
 - Hopefully fix `extract_value` export problem with some shared builds.
 - Disable broken Python lint checks in lint script.
 - Fix lint script for out-of-tree builds.
 - Make transactions activate when executing prepared statement.  (#512)
6.4.7
 - Fix link error: missing `extract_value<nullptr_t>` in `stream_from`. (#340)
6.4.6
 - `ilostream` could truncate at `0xff` byte at buffer boundary (#284, #286).
6.4.5
 - Fixed "const" support in arguments to parameterised/prepared statements.
6.4.4
 - Use pkg-config if pg-config is not available.
 - In CMake build, prefer CMake's config headers over any found in source tree.
6.4.3
 - Updated copyright strings.
 - Added missing "stream" headers to autotools-based install.
 - Added stream headers to pqxx/pqxx header.
6.4.2
 - Fix mistake for Windows in 6.4.1: use PQfreemem, not std::free.
 - Easily enable runtime checks in configure: "--enable-audit".
 - Enable optimisation in CircleCI build.
6.4.1
 - Fixed more memory leaks.
6.4.0
 - Half fix, half work around nasty notice processor life time bug.
 - Fix selective running of tests: "test/unit/runner test_infinities".
 - Added some missing `std::` qualifications.
6.3.3
 - Throw more appropriate error when unable to read client encoding.
 - CMake build fixes.
6.3.2
 - Conversion errors no longer throw pqxx::failure; always conversion_error!
 - Use C++17's built-in numeric string conversions, if available.
 - Query numeric precision in a more sensible, standard way.
 - Avoid "dead code" warning.
 - Replace obsolete autoconf macros.
 - Remove all "using namespace std".
 - CMake build fixes.
6.3.1
 - Windows compile fix (CALLBACK is a macro there).
 - Work around Visual Studio 2017 not supporting ISO 646.
6.3.0
 - New "table stream" classes by Joseph Durel: stream_from/stream_to.
 - Support weird characters in more identifiers: cursors, notifcations, etc.